<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="ru.astar.fuckprefect.MainActivity">

    <ImageView
        android:id="@+id/previewImage"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <Button
        android:id="@+id/prevImageButton"
        android:layout_below="@id/previewImage"
        android:layout_marginTop="16dp"
        android:text="@string/prev_sym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/nextImageButton"
        android:text="@string/next_sym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prevImageButton"
        android:layout_alignBottom="@+id/prevImageButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/saveImageButton"
        android:layout_below="@id/previewImage"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/decrementMinuteButton"
        android:layout_below="@id/nextImageButton"
        android:layout_marginTop="16dp"
        android:text="@string/decrement_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/incrementMinuteButton"
        android:text="@string/increment_minute"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nextImageButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/setDateTimeButton"
        android:layout_below="@id/saveImageButton"
        android:text="@string/set_date"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/settedDataTextView"
        android:layout_below="@id/decrementMinuteButton"
        android:text="@string/setted_data"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/countImageTextView"
        android:layout_below="@id/settedDataTextView"
        android:text="@string/count_photo"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
